--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Battleship Game</h1>
-    <script src="battleship.js"
+    <script src="battleship_v1.js"
     ></script>
 </body>
 </html>
